# document-creation-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
comfy_workflows/: README.md  presentation_sdxl.json
src/document_creation_mcp/: __init__.py  comfy_client.py  config.py  models.py  pptx_builder.py  server.py  storage.py  theme_manager.py
src/document_creation_mcp/themes/: corporate.yaml  dark_tech.yaml
themes/: academic.yaml  corporate.yaml  dark_tech.yaml  minimal.yaml
