[project]
name = "document-creation-mcp"
version = "0.1.0"
description = "MCP server for AI-driven document creation, starting with PowerPoint decks."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "python-pptx>=0.6.23",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
document-creation-mcp = "document_creation_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_creation_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
